migrating to scss

--- a/single-service.html
+++ b/single-service.html
@@ -12,30 +12,28 @@
     <title>Sland - HTML Template || Single Service</title>
     <!--====== Favicon Icon ======-->
     <link rel="shortcut icon" href="assets/images/favicon.png" type="image/x-icon">
-    <!--====== Google Fonts ======-->
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
-    <!--====== Font Awesome ======-->
-    <link rel="stylesheet" href="assets/css/fontawesome.5.9.0.min.css">
-    <!--====== Flaticon CSS ======-->
-    <link rel="stylesheet" href="assets/css/flaticon.css">
-    <!--====== Bootstrap css ======-->
-    <link rel="stylesheet" href="assets/css/bootstrap.4.5.3.min.css">
-    <!--====== Magnific Popup ======-->
-    <link rel="stylesheet" href="assets/css/magnific-popup.css">
-    <!--====== Slick Slider ======-->
-    <link rel="stylesheet" href="assets/css/slick.css">
-    <!--====== Animate CSS ======-->
-    <link rel="stylesheet" href="assets/css/animate.min.css">
-    <!--====== Nice Select ======-->
-    <link rel="stylesheet" href="assets/css/nice-select.css">
-    <!--====== Padding Margin ======-->
-    <link rel="stylesheet" href="assets/css/spacing.min.css">
-    <!--====== Menu css ======-->
-    <link rel="stylesheet" href="assets/css/menu.css">
-    <!--====== Main css ======-->
-    <link rel="stylesheet" href="assets/css/style.css">
-    <!--====== Responsive css ======-->
-    <link rel="stylesheet" href="assets/css/responsive.css">
+    <!-- Google Fonts -->
+<link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
+
+<!-- Font Awesome -->
+<link rel="stylesheet" href="assets/css/fontawesome.5.9.0.min.css">
+
+<!-- Flaticon -->
+<link rel="stylesheet" href="assets/css/flaticon.css">
+
+<!-- Bootstrap -->
+<link rel="stylesheet" href="assets/css/bootstrap.4.5.3.min.css">
+
+<!-- Plugins (si aún no los migraste a SCSS) -->
+<link rel="stylesheet" href="assets/css/magnific-popup.css">
+<link rel="stylesheet" href="assets/css/slick.css">
+<link rel="stylesheet" href="assets/css/animate.min.css">
+<link rel="stylesheet" href="assets/css/nice-select.css">
+<link rel="stylesheet" href="assets/css/spacing.min.css">
+
+<!-- 🔁 Tu nuevo archivo SCSS compilado -->
+<link rel="stylesheet" href="assets/css/main.css">
+
 
 </head>
 
